# ir-exercises

./: README.md  pyproject.toml
exercises/lab01-intro-to-pandas/: Lab_01.ipynb
exercises/lab02-spaCy/: Lab_02.ipynb
