[project]
name = "IR_Exercises"
version = "0.1.0"
description = "Lab exercises for the Information Retrieval lecture at the Dresden University of Technology (TUD) for the Winter term 25/26."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "ipython>=9.6.0",
    "ipywidgets>=8.1.7",
    "ir-datasets>=0.5.11",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
]
